# tomobase

./: .gitignore  .readthedocs.yaml  README.md  importtime.txt  mkdocs.yml  setup.cfg  setup.py
conda/: conda.yaml
docs/: apis.md  conf.py  index.md  requirements.txt
docs/scripts/: continuous_tomo.ipynb  tomography_tutorial.ipynb
docs/sphynx/: conf.py
scripts/: 01_tomography_tutorial copy.ipynb  01_tomography_tutorial.ipynb  02_processing.ipynb  03_imports.ipynb  continuous_tomo.ipynb  hooks_test.ipynb  registrations.ipynb  tomography_tutorial.ipynb  widgets_test.ipynb
scripts/continoustomo/: simulations_static.ipynb  visualization.ipynb
scripts/working directories/: 01_tomography_tutorial copy.ipynb  02_processing.ipynb  error_bars.ipynb
tomobase/: __init__.py  enums.py  globals.py  help.py  hooks.py  log.py  registration.py  typehints.py  utils.py
tomobase/data/: __init__.py  base.py  image.py  quantification.py  sinogram.py  volume.py
tomobase/napari/: __init__.py  base.py  utils.py
tomobase/phantoms/: __init__.py  nanocage.py  nanocube.py  nanorod.py  phantom.py
tomobase/plots/: __init__.py  base.py  gui.py  imagine.py  tiltscheme.py
tomobase/processes/: __init__.py  forward_project.py  gui.py  plot.py  reconstruct.py  test.py
tomobase/registrations/: __init__.py  base.py  datatypes.py  environment.py  globals.py  gpucontext.py  phantoms.py  plots.py  processes.py  progress.py  registers.py  tiltschemes.py  transforms.py
tomobase/stackview/: base.py
tomobase/tiltschemes/: __init__.py  binary.py  grs.py  incremental.py  tiltscheme.py
(+231 files in other folders)
