[metadata]
name = tomobase
version = attr: tomobase.__version__
license = None
author = Timothy Craig
author_email = tcraig258@gmail.com
description = A collection of base data types, widgets and  functions for tomography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tcraig088/tomobase
project_urls =
    Bug Tracker = https://github.com/Tcraig088/tomobase/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = tomobase
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    scipy
    imageio
    progress
    h5py
    mrcz
    makefun
    qtpy
    magicgui
    pandas
    colorama
    plotly
    scikit-image